fix: prevent breadcrumb from wrapping

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -127,19 +127,9 @@ main.main-content {
 
     .breadcrumb-container {
       height: 30px;
-      display: grid;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      -moz-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      white-space: nowrap;
-      overflow-x: auto;
 
       .breadcrumb {
         padding-left: 0;
-        list-style: none;
-        margin: 0;
         font-size: 13px;
 
         .breadcrumb-item {
